kubernetes/apps/media/jellyseerr/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: requests.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - requests.krapulax.dev
  rules:
    - backendRefs:
        - name: jellyseerr
          namespace: media
          port: 5055
